# causal-effect-estimation-from-stationary-time-series-data-simulations

./: .pre-commit-config.yaml  README.md  analytic_conditional_variances.py  config.py  data_generator.py  main.py  models.py  plot_helpers.py  pyproject.toml  rooted_mean_squared_errors.py  run_admg.py  run_path_based.py
experiments/: admg_adjustment.py  dag_adjustment.py  path_rule.py  relation_variance_quotient.py
tests/: test_conditional_variance_computations.py  test_data_generator.py  test_error_computation.py  test_helpers.py
