[tool.poetry]
name = "causal-effect-time-series"
version = "0.1.0"
description = ""
authors = ["Sofia Faltenbacher <faltenbacher.sofia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
python-benedict = "^0.33.0"
causy = "^0.0.37"
pyinstrument = "^4.6.1"
statsmodels = "^0.14.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
